# lavoix

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  concepts.md  index.md  package-lock.json  package.json  related-documents.md
docs-webapp/src/: App.tsx
docs/.vitepress/: config.mts
docs/api/: index.md  library-api.md  rest-api.md
docs/site/: tailwind.config.js
docs/site/src/: App.tsx  index.css
docs/tutorials/: building-a-provider.md  getting-started.md
src/lavoix/: __init__.py  api.py  client.py  config.py  schemas.py  service.py
src/lavoix/providers/: __init__.py  base.py  faster_whisper_stt.py  mistral_voxtral.py  mistral_voxtral_tts.py  pyttsx3_tts.py
tests/: test_api.py  test_service.py
